rust/crates/rax/src/text/rules/snapshots/rax__text__rules__n_in_char_set__tests__ascii_too_short.snap
---
source: crates/rax/src/text/rules/n_in_char_set.rs
expression: result
---
Err(
    RuleError {
        reason: "input too short or not enough chars in set",
    },
)
