rust/crates/rax/src/text/rules/snapshots/rax__text__rules__n_in_char_set__tests__utf8_match.snap
---
source: crates/rax/src/text/rules/n_in_char_set.rs
expression: result
---
Ok(
    (
        "你好",
        "世界",
    ),
)
