rust/crates/rax/src/text/rules/snapshots/rax__text__rules__n_in_char_set__tests__zero_n.snap
---
source: crates/rax/src/text/rules/n_in_char_set.rs
expression: result
---
Ok(
    (
        "",
        "abc123",
    ),
)
